[project]
name = "comfyui_pipeline_tool"
description = "a node for easy using hub pipe"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Pipeline_Tool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_Pipeline_Tool"
Icon = ""
